# noema

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
docs/: acquisition-readiness-2b.md  api-spec.md  api-stability-contract.md  buyer-due-diligence-index.md  buyer-pitch-deck-outline.md  demo-scenario.md  deployment-guide.md  goal-completion-audit.md  library-boundary-decision.md  noema-agent-sandbox-plan.md  observability-kpi.md  onboarding.md  pilot-readiness-checklist.md  pilot-readiness-log.md  pricing-draft.md  release-readiness-audit.md  runbook.md  saleable-program-goal-registry.md  saleable-program-readiness.md  security-validation-checklist.md  sla-and-support.md  terms-draft.md  threat-model.md  transfer-readiness-plan.md
reviewer/: README.md  pyproject.toml  requirements-ci-hashes.txt  requirements-ci.in
reviewer/noema_reviewer/: __init__.py  __main__.py  agent.py  cli.py  config.py  gating.py  github_io.py  manifest.py  models.py
reviewer/tests/: test_agent.py  test_central_review_workflow.py  test_cli.py  test_config.py  test_gating.py  test_github_io.py  test_manifest.py  test_models.py
scripts/: acquisition-data-room-manifest.mjs  acquisition-readiness-audit.mjs  check-kpi.mjs  collect-kpi-logs.sh  compute-kpi.mjs  demo-exchange.sh  evaluate-observability-alerts.mjs  kpi-gate.mjs  production-evidence-preflight.mjs  saleable-readiness-audit.mjs  security-validation-evidence.mjs  smoke-readiness.sh
src/: index.ts
test/: acquisition-data-room-manifest.test.ts  (+11 more)
(+14 files in other folders)
