[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noema-reviewer"
version = "0.1.0"
description = "Noema independent PydanticAI second reviewer for ContextualWisdomLab pull requests."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai-slim[openai]>=0.0.14",
]

[project.scripts]
noema-reviewer = "noema_reviewer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "interrogate>=1.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=noema_reviewer --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["noema_reviewer"]
omit = ["tests/*", "noema_reviewer/__main__.py"]

[tool.coverage.report]
show_missing = true

[tool.interrogate]
fail-under = 100
exclude = ["tests"]
